--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=xxxx
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=xxxx
+spring.datasource.password=xxxx
 spring.h2.console.enabled=true
 
 # Thymeleaf Configuration
